# linuxQOR

./: .gitignore  BUILDING.md  CHANGES.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  CREDITS.md  FAQ.md  FEATURES.md  KEY_CONCEPTS.md  LAYOUT.md  LICENSE  README.md  STATUS.md
examples/: CMakeLists.txt
examples/advanced/: CMakeLists.txt
examples/advanced/httpserver/: CMakeLists.txt  app.cpp  app.h  httpserver_main.cpp  httpserverapp.cpp  httpserverapp.h
examples/basic/: CMakeLists.txt  purpose.md  read.md
examples/basic/basic/: CMakeLists.txt  main.cpp
examples/basic/fileprocessor/: CMakeLists.txt  fileprocessor_main.cpp  fileprocessorapp.cpp  fileprocessorapp.h  fileprocessorworkflow.cpp  fileprocessorworkflow.h
examples/basic/helloworld/: CMakeLists.txt  main.cpp
examples/basic/options/: CMakeLists.txt  main.cpp  optionsapp.cpp  optionsapp.h
examples/basic/outline/: CMakeLists.txt  main.cpp
examples/basic/parallel/: CMakeLists.txt  main.cpp  prole.cpp  prole.h
examples/basic/plumbing/: CMakeLists.txt  main.cpp
examples/basic/readlinebyline/: CMakeLists.txt  linebyline_main.cpp  linebylineworkflow.cpp  linebylineworkflow.h
examples/basic/roller/: CMakeLists.txt  app.cpp  app.h  customfeature.cpp  customfeature.h  customrole.cpp  customrole.h  main.cpp
examples/basic/work/: CMakeLists.txt  customworkflow.cpp  customworkflow.h  main.cpp  workflow.cpp  workflow.h
examples/echoclient/: CMakeLists.txt  echoclient_main.cpp  echoclienterrorhandler.cpp  echoclienterrorhandler.h  echoclientloghandler.cpp  echoclientloghandler.h  echoclientworkflow.cpp  echoclientworkflow.h  echorequest.h  echorequestpipeline.cpp  echorequestpipeline.h  echoresponse.h  echoresponsefilter.cpp  echoresponsefilter.h  echoresponseparser.cpp  echoresponseparser.h  echoresponsepipeline.cpp  echoresponsepipeline.h
examples/echoclient/nodes/: responsenode.h
examples/echoclient2/: CMakeLists.txt  echoclient2_main.cpp  echoclient2workflow.cpp  echoclient2workflow.h
examples/echoserver/: CMakeLists.txt  clientsessionworkflow.cpp  clientsessionworkflow.h  echoprotocol.cpp  echoprotocol.h  echorequest.h  echorequestfilter.cpp  echorequestfilter.h  echorequestparser.cpp  echorequestparser.h  echoserver_main.cpp  echoserverapp.cpp  echoserverapp.h  echoserverworkflow.cpp  echoserverworkflow.h  errorhandler.cpp  errorhandler.h  serverloghandler.cpp  serverloghandler.h  serverworkflow.cpp  serverworkflow.h  sessionpipeline.cpp  sessionpipeline.h
examples/echoserver/nodes/: requestnode.h
examples/experimental/: CMakeLists.txt
examples/experimental/canvastest/: CMakeLists.txt  main.cpp
examples/experimental/curlike/: main.cpp  workflow.h
examples/experimental/echoclient/: CMakeLists.txt  echoclient_main.cpp  echoclienterrorhandler.h  echoclientloghandler.cpp  (+4 more)
examples/hydra/: CMakeLists.txt  echoworkflow.cpp  echoworkflow.h  errorhandler.h  hydra_main.cpp  logginghandler.h  requestpipeline.cpp  requestpipeline.h  responsepipeline.cpp  responsepipeline.h  workflow.cpp  workflow.h
examples/osspecific/: CMakeLists.txt
examples/testclient/: CMakeLists.txt  testclient_main.cpp
examples/webserver/: CMakeLists.txt  webserver_main.cpp
src/framework/: CMakeLists.txt  purpose.md
src/platform/: CMakeLists.txt  isubsystem.h  platform.cpp  platform.h  pupose.md  purpose.md  qor_platform.cpp
src/qor/: CMakeLists.txt  dependency.md  purpose.md
test/: CMakeLists.txt  makefile  test_compiler.cpp  test_main  test_main.cpp  test_test.cpp
test/application/: test_application.cpp
test/assert/: bool.cpp  complex.cpp  double.cpp  float.cpp  int.cpp  iterators.cpp  map.cpp  multimap.cpp  optional.cpp  pointers.cpp  priority_queue.cpp  set.cpp  shared_ptr.cpp  span.cpp  stack.cpp  string.cpp  string_view.cpp  unique_ptr.cpp  unordered_map.cpp  unordered_multimap.cpp  unordered_set.cpp  user_class.cpp  user_subject.cpp  weak_ptr.cpp
test/components/: test_optionparser.cpp
test/datastructures/: guid.cpp
test/delegate/: test_delegate.cpp  test_multicastdelegate.cpp
test/error/: test_error.cpp
test/factory/: test_factory.cpp
test/filesystem/: CMakeLists.txt  smoke.cpp  test_main.cpp
test/framework/: file_tests.cpp  host.cpp  io_service_fixture.hpp  io_service_tests.cpp  scheduling_operator_tests.cpp  static_thread_pool_tests.cpp  test_pipeline.cpp  test_signals.cpp  test_thread.cpp  test_threadpool.cpp  test_workflow.cpp
test/injection/: test_injection.cpp
test/interception/: test_callinterceptor.cpp  test_functioncontext.cpp  test_functioncontextlock.cpp  test_parameters.cpp
test/issue/: test_issue.cpp
test/iterators/: test_iterators.cpp
test/mock/: CMakeLists.txt  test_args.cpp  test_array.cpp  test_cfuncs.cpp  test_classargs.cpp  test_com_support_stdcall.cpp  test_constref_params.cpp  test_cv_funcs.cpp  test_do.cpp  test_dontcare.cpp  test_dynamic_cast.cpp  test_except.cpp  test_exception_quality.cpp  test_filter.cpp  test_inparam.cpp  test_isvirtual.cpp  test_membermock.cpp  test_mi.cpp  test_mock.cpp  test_nevercall.cpp  test_objectreturn.cpp  test_optional.cpp  test_outparam.cpp  test_overload.cpp  test_ref_args.cpp  test_regression_arg_count.cpp  test_retval.cpp  test_transaction.cpp  test_zombie.cpp
test/objectcontext/: test_objectcontext.cpp
test/observer/: test_chainlink.cpp  test_observer.cpp
test/operational/: CMakeLists.txt  excluded_thread_pool_tests.cpp  test_main.cpp  test_profiling.cpp  test_threadpool.cpp
test/pipeline/: CMakeLists.txt  test_main.cpp  testttfreader.cpp  testwriter.cpp
test/platform/: test_asyncio.cpp  test_filesystem.cpp  test_network.cpp
test/profiling/: test_profiling.cpp
test/property/: test_property.cpp
test/reference/: test_ref.cpp
test/reflection/: test_reflection.cpp
test/singleton/: test_singleton.cpp  test_threadsingleton.cpp
test/system/: test_asyncio.cpp  test_filesystem.cpp
test/text/: test_codestring.cpp  test_constbuffer.cpp  test_localstring.cpp  test_mutablebuffer.cpp  test_ucs2string.cpp  test_ucs4string.cpp  test_utf16string.cpp  test_utf8string.cpp
test/ui/: CMakeLists.txt
(+5569 files in other folders)
