cmake_minimum_required(VERSION 3.10.0)
project(QOR VERSION 0.1.0 LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
include ("${CMAKE_SOURCE_DIR}/cmake/flags.cmake")

add_subdirectory(outline)
add_subdirectory(options)
add_subdirectory(roller)
add_subdirectory(work)
add_subdirectory(plumbing)
add_subdirectory(parallel)
add_subdirectory(readlinebyline)

