add_subdirectory(host)
add_subdirectory(thread)
add_subdirectory(signals)
add_subdirectory(pipeline)
add_subdirectory(workflow)
add_subdirectory(role)
add_subdirectory(application)
add_subdirectory(task)
add_subdirectory(asyncioservice)
add_subdirectory(resources)
add_subdirectory(events)
#add_subdirectory(ui/gl)
add_subdirectory(dynamiclibrary)
add_subdirectory(ui/desktopui)
