add_subdirectory(module)
add_subdirectory(datastructures)
add_subdirectory(objectcontext)
add_subdirectory(injection)
add_subdirectory(interception)
add_subdirectory(current)
add_subdirectory(issue)
add_subdirectory(error)
add_subdirectory(property)
add_subdirectory(log)
add_subdirectory(text)
add_subdirectory(reporting)
