add_subdirectory(module)
add_subdirectory(essentials/datastructures)
add_subdirectory(essentials/objectcontext)
add_subdirectory(memory/injection)
add_subdirectory(flyers/interception)
add_subdirectory(essentials/current)
add_subdirectory(flyers/issue)
add_subdirectory(flyers/error)
add_subdirectory(property)
add_subdirectory(flyers/log)
add_subdirectory(essentials/text)
add_subdirectory(essentials/reporting)
